Bug 589894 - Fix a number of build warnings in content/; r=smaug